--- a/style.scss
+++ b/style.scss
@@ -6,12 +6,12 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   color: rgba(255, 255, 255, 0.87);
-  background-color:#242424;
+  background-color: #242424;
 }
 
 .start {
 
-  height: 100vh;
+  height: calc(100vh - 80px);
   width: 100vw;
   display: flex;
   justify-content: center;
@@ -22,10 +22,42 @@
       height: 40%;
       width: 30%;
       border-radius: 50%;
+      font-size: 3rem;
+      font-weight: 600;
+
       &:hover {
         background-color: #afacac;
         cursor: pointer;
+        color: darken(#383737, 30%);
       }
   }
-}
+  }
 
+  .header {
+    height: 80px;
+    background: #afacac;
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    &__toggle-button {
+      background-color: rgb(58, 61, 60);
+      color: rgb(215, 215, 220);
+      height: 60px;
+      border-radius: 15px;
+    }
+  }
+
+  .light-theme {
+    background-color: beige;
+    color: black;
+    .start {
+      &__button {
+        background-color: #428155;
+        color: azure;
+        &:hover {
+          background-color: darken(#428155, 10%);
+          color: lighten(azure, 30%);
+        }
+      }
+    }
+  }
