--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,7 @@
 
   &__button {
     display: block;
-      height: 40%;
+      height: 35%;
       width: 30%;
       border-radius: 50%;
       font-size: 3rem;
@@ -53,7 +53,7 @@
       height: 60px;
       border-radius: 15px;
       &:hover {
-        filter: brightness(85%);
+        background: linear-gradient(50deg, white, black);
 
       }
     }
@@ -74,3 +74,20 @@
       }
     }
   }
+
+    h1 {
+      font-size: 5rem;
+      background: gold;
+      box-shadow: 0 -200px 100px -120px crimson inset;
+      border-radius: 50%;
+      padding: 80px;
+      animation: h1 3s infinite alternate;
+    }
+
+@keyframes h1 {
+  50%{
+    background: skyblue;
+    box-shadow: 0 -200px 100px yellowgreen inset;
+  }
+  
+}
